# savant-elite

./: .gitignore  AGENTS.md  BEADS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RE_FINDINGS.md  TESTING.md  install.sh
.beads/: issues.jsonl
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: main.rs  usb_probe.rs
tests/: README.md  cli_validation.rs  e2e_config.sh  e2e_hardware_sim.sh
tests/e2e/: run_all.sh  test_config.sh  test_doctor.sh  test_help_version.sh  test_keys.sh  test_presets.sh
tests/e2e/lib/: logging.sh
tests/fixtures/: README.md
tests/fixtures/edge_cases/: comments.conf  duplicate_keys.conf  equals_in_value.conf  unknown_fields.conf
tests/fixtures/invalid/: invalid_key.conf  invalid_modifier.conf  malformed_syntax.conf  missing_left.conf  missing_middle.conf  missing_right.conf
tests/fixtures/valid/: all_modifiers.conf  basic.conf  function_keys.conf  special_keys.conf  with_whitespace.conf
