[package]
name = "savant-elite"
version = "0.1.2"
edition = "2021"
description = "Kinesis Savant Elite foot pedal programmer for macOS"
license = "MIT"
repository = "https://github.com/Dicklesworthstone/savant-elite"
readme = "README.md"
keywords = ["kinesis", "foot-pedal", "usb", "hid", "macos"]
categories = ["command-line-utilities", "hardware-support"]

[dependencies]
clap = { version = "4", features = ["derive"] }
hidapi = "2"
rusb = "0.9"
libusb1-sys = { version = "0.7", features = ["vendored"] }
anyhow = "1"
hex = "0.4"
rich_rust = "0.1"

[[bin]]
name = "savant"
path = "src/main.rs"
